--- a/index.html
+++ b/index.html
@@ -3,10 +3,109 @@
 <head>
   <meta charset="utf-8">
   <title>LazySloth Coin</title>
+  <style>
+    /* === Base Styles === */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      background: #fdfdfd;
+      color: #222;
+      text-align: center;
+    }
+
+    /* === Header === */
+    header {
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .header-img {
+      width: 100%;
+      height: 70vh;       /* 50% of viewport height */
+      object-fit: cover;  /* crop instead of stretch */
+      display: block;
+    }
+
+    /* === Navigation === */
+    nav {
+      background: #333;
+      padding: 10px 20px;
+      text-align: right;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    /* === Sections === */
+    section {
+      padding: 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      color: #333;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      margin: 8px 0;
+    }
+
+    /* === Logo im Home === */
+    .logo {
+      margin-top: 20px;
+      max-width: 300px;
+      height: auto;
+    }
+
+    /* === Socials === */
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 15px;
+    }
+
+    .social-icon {
+      width: 40px;
+      height: 40px;
+      transition: transform 0.2s ease;
+    }
+
+    .social-icon:hover {
+      transform: scale(1.1);
+    }
+
+    /* === Footer === */
+    footer {
+      background: #333;
+      color: white;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-  <h1>🦥 LazySloth Coin</h1>
 
+  <!-- === Header mit Bild === -->
+  <header>
+    <img src="pics/0.Banner.png" alt="LazySloth Header" class="header-img">
+  </header>
+
+  <!-- === Navigation === -->
   <nav>
     <a href="#home">Home</a> |
     <a href="#about">About</a> |
@@ -14,17 +113,20 @@
     <a href="#socials">Socials</a>
   </nav>
 
+  <!-- === Home Section === -->
   <section id="home">
     <h2>Welcome to LazySloth</h2>
     <p>The chillest memecoin in the jungle. Slow, steady, and slothy!</p>
-    <img src="lazysloth.png" alt="LazySloth Logo" width="300">
+    <img src="lazysloth.png" alt="LazySloth Logo" class="logo">
   </section>
 
+  <!-- === About Section === -->
   <section id="about">
     <h2>About LazySloth</h2>
     <p>LazySloth is a fun community-driven memecoin. We take things slow but aim steady – building a relaxed, positive crypto vibe.</p>
   </section>
 
+  <!-- === Tokenomics Section === -->
   <section id="tokenomics">
     <h2>Tokenomics</h2>
     <ul>
@@ -36,19 +138,30 @@
     </ul>
   </section>
 
+  <!-- === Socials Section === -->
   <section id="socials">
     <h2>Join the Sloth Gang</h2>
     <p>Follow LazySloth on social media:</p>
-    <ul>
-      <li><a href="https://instagram.com/" target="_blank">Instagram</a></li>
-      <li><a href="https://twitter.com/" target="_blank">Twitter (X)</a></li>
-      <li><a href="https://t.me/" target="_blank">Telegram</a></li>
-      <li><a href="https://radium.to/" target="_blank">Radium</a></li>
-    </ul>
+    <div class="socials">
+      <a href="https://instagram.com/" target="_blank">
+        <img src="instagram.png" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://twitter.com/" target="_blank">
+        <img src="twitter.png" alt="Twitter" class="social-icon">
+      </a>
+      <a href="https://t.me/" target="_blank">
+        <img src="telegram.png" alt="Telegram" class="social-icon">
+      </a>
+      <a href="https://radium.to/" target="_blank">
+        <img src="radium.png" alt="Radium" class="social-icon">
+      </a>
+    </div>
   </section>
 
+  <!-- === Footer === -->
   <footer>
     <p>© 2025 LazySloth Coin – Take it slow 🦥</p>
   </footer>
+
 </body>
 </html>
