--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <!-- === Header mit Bild === -->
   <header>
-    <img src="pics/0.Banner.png" alt="LazySloth Header" class="header-img">
+    <img src="0.Banner.png" alt="LazySloth Header" class="header-img">
   </header>
 
   <!-- === Navigation === -->
@@ -165,3 +165,4 @@
 
 </body>
 </html>
+
