--- a/index.html
+++ b/index.html
@@ -1,168 +1,272 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="utf-8">
-  <title>LazySloth Coin</title>
+  <meta charset="utf-8" />
+  <title>LazySloth — The Chill Memecoin</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    /* === Base Styles === */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      background: #fdfdfd;
-      color: #222;
-      text-align: center;
+    :root{
+      --bg-light:#FFD700;   /* Hellgold */
+      --bg-dark:#FFA500;    /* Dunkelgold */
+      --fg:#1f1f1f;         
+      --muted:#ccc;
+      --brand:#DAA520;      /* goldenrod */
+      --brand-2:#B8860B;    /* dark goldenrod */
+      --line:#444;
+      --shadow:0 10px 30px rgba(0,0,0,.25);
+      --maxw:1100px;
     }
 
-    /* === Header === */
-    header {
-      width: 100%;
-      overflow: hidden;
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;
+      color:var(--fg);
+    }
+    .container{max-width:var(--maxw);margin:auto;padding:0 16px}
+
+    /* Header */
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      height:10vh;
+      padding:0 24px;
+      background:transparent;
+      position:absolute;
+      top:0; left:0; right:0;
+      z-index:100;
+    }
+    .logo-header{height:70%;width:auto}
+    .btn{
+      background:var(--brand);
+      color:#fff;
+      border-radius:999px;
+      padding:10px 18px;
+      font-weight:700;
+      text-decoration:none;
+      box-shadow:var(--shadow);
+      transition:filter .15s ease;
+    }
+    .btn:hover{filter:brightness(1.08)}
+
+    /* Section 1: Hero mit Sonnenstrahlen */
+    #s1{
+      height:100vh;
+      width:100vw;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      text-align:center;
+
+      /* Sonnenstrahl-Effekt */
+      background:
+        radial-gradient(circle at center,
+          var(--bg-light) 0%,
+          var(--bg-dark) 70%),
+        conic-gradient(
+          from 0deg,
+          rgba(255, 215, 0, 0.35) 0deg 10deg,
+          transparent 10deg 20deg,
+          rgba(255, 215, 0, 0.35) 20deg 30deg,
+          transparent 30deg 40deg,
+          rgba(255, 215, 0, 0.35) 40deg 50deg,
+          transparent 50deg 60deg,
+          rgba(255, 215, 0, 0.35) 60deg 70deg,
+          transparent 70deg 80deg,
+          rgba(255, 215, 0, 0.35) 80deg 90deg,
+          transparent 90deg 100deg,
+          rgba(255, 215, 0, 0.35) 100deg 110deg,
+          transparent 110deg 120deg,
+          rgba(255, 215, 0, 0.35) 120deg 130deg,
+          transparent 130deg 140deg,
+          rgba(255, 215, 0, 0.35) 140deg 150deg,
+          transparent 150deg 160deg,
+          rgba(255, 215, 0, 0.35) 160deg 170deg,
+          transparent 170deg 180deg,
+          rgba(255, 215, 0, 0.35) 180deg 190deg,
+          transparent 190deg 200deg,
+          rgba(255, 215, 0, 0.35) 200deg 210deg,
+          transparent 210deg 220deg,
+          rgba(255, 215, 0, 0.35) 220deg 230deg,
+          transparent 230deg 240deg,
+          rgba(255, 215, 0, 0.35) 240deg 250deg,
+          transparent 250deg 260deg,
+          rgba(255, 215, 0, 0.35) 260deg 270deg,
+          transparent 270deg 280deg,
+          rgba(255, 215, 0, 0.35) 280deg 290deg,
+          transparent 290deg 300deg,
+          rgba(255, 215, 0, 0.35) 300deg 310deg,
+          transparent 310deg 320deg,
+          rgba(255, 215, 0, 0.35) 320deg 330deg,
+          transparent 330deg 340deg,
+          rgba(255, 215, 0, 0.35) 340deg 350deg,
+          transparent 350deg 360deg
+        );
+      background-blend-mode: overlay;
+      position:relative;
+    }
+    .hero-image{
+      width:70vw;
+      height:70vh;
+      object-fit:contain;
+      margin:0 auto 10px auto;
+    }
+    .tagline{
+      font-size:2.5rem;
+      font-weight:800;
+      margin:10px 0 20px 0;
+      color:var(--fg);
+    }
+    .socials{
+      display:flex;
+      gap:24px;
+      justify-content:center;
+      margin-top:10px;
+    }
+    .socials a{
+      display:inline-block;
+      transition:transform .2s ease;
+    }
+    .socials a:hover{transform:scale(1.1)}
+    .socials img{
+      width:48px;
+      height:48px;
+      display:block;
     }
 
-    .header-img {
-      width: 100%;
-      height: 70vh;       /* 50% of viewport height */
-      object-fit: cover;  /* crop instead of stretch */
-      display: block;
+    /* Section 2: Buy */
+    #buy{
+      height:100vh;
+      background:#000;
+      color:var(--bg-light);
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      text-align:center;
+      padding:40px 20px;
+    }
+    #buy h2{margin-bottom:12px}
+    #buy .lead{margin-bottom:40px;color:var(--muted)}
+
+    .buy-btn{
+      display:inline-block;
+      background:var(--brand-2);
+      color:#fff;
+      border-radius:999px;
+      padding:14px 24px;
+      font-size:18px;
+      font-weight:700;
+      text-decoration:none;
+      box-shadow:var(--shadow);
+      transition:filter .15s ease;
+      margin-bottom:40px;
+    }
+    .buy-btn:hover{filter:brightness(1.1)}
+
+    .steps{
+      display:grid;
+      grid-template-columns:1fr;
+      gap:20px;
+      width:100%;
+      max-width:1000px;
+    }
+    @media(min-width:800px){
+      .steps{grid-template-columns:repeat(4,1fr)}
+    }
+    .step{
+      background:#111;
+      border:1px solid var(--line);
+      border-radius:12px;
+      padding:20px;
+      box-shadow:var(--shadow);
+      text-align:left;
+    }
+    .step b{
+      display:block;
+      font-size:18px;
+      margin-bottom:8px;
+      color:var(--bg-light);
     }
 
-    /* === Navigation === */
-    nav {
-      background: #333;
-      padding: 10px 20px;
-      text-align: right;
+    /* Section 3 */
+    #about{
+      background:linear-gradient(135deg,var(--bg-light),var(--bg-dark));
+      color:var(--fg);
+      padding:56px 0;
+      text-align:center;
     }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 10px;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    /* === Sections === */
-    section {
-      padding: 20px;
-    }
-
-    h2 {
-      margin-top: 40px;
-      color: #333;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    ul li {
-      margin: 8px 0;
-    }
-
-    /* === Logo im Home === */
-    .logo {
-      margin-top: 20px;
-      max-width: 300px;
-      height: auto;
-    }
-
-    /* === Socials === */
-    .socials {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 15px;
-    }
-
-    .social-icon {
-      width: 40px;
-      height: 40px;
-      transition: transform 0.2s ease;
-    }
-
-    .social-icon:hover {
-      transform: scale(1.1);
-    }
-
-    /* === Footer === */
-    footer {
-      background: #333;
-      color: white;
-      padding: 15px;
-      margin-top: 40px;
+    footer{
+      border-top:1px solid var(--line);
+      padding:28px 0;
+      color:var(--muted);
+      font-size:14px;
+      text-align:center;
+      background:rgba(255,248,230,0.85)
     }
   </style>
 </head>
 <body>
 
-  <!-- === Header mit Bild === -->
+  <!-- Header -->
   <header>
-    <img src="0.Banner.png" alt="LazySloth Header" class="header-img">
+    <img src="0.Banner.png" alt="LazySloth Logo" class="logo-header">
+    <a href="#buy" class="btn">Buy LAZY</a>
   </header>
 
-  <!-- === Navigation === -->
-  <nav>
-    <a href="#home">Home</a> |
-    <a href="#about">About</a> |
-    <a href="#tokenomics">Tokenomics</a> |
-    <a href="#socials">Socials</a>
-  </nav>
+  <!-- SECTION 1: Hero -->
+  <section id="s1">
+    <img src="0.Banner.png" alt="LazySloth Hero" class="hero-image">
 
-  <!-- === Home Section === -->
-  <section id="home">
-    <h2>Welcome to LazySloth</h2>
-    <p>The chillest memecoin in the jungle. Slow, steady, and slothy!</p>
-    <img src="lazysloth.png" alt="LazySloth Logo" class="logo">
-  </section>
+    <!-- Spruch -->
+    <p class="tagline">Lazy but rich af</p>
 
-  <!-- === About Section === -->
-  <section id="about">
-    <h2>About LazySloth</h2>
-    <p>LazySloth is a fun community-driven memecoin. We take things slow but aim steady – building a relaxed, positive crypto vibe.</p>
-  </section>
-
-  <!-- === Tokenomics Section === -->
-  <section id="tokenomics">
-    <h2>Tokenomics</h2>
-    <ul>
-      <li>Total Supply: 1,000,000,000 LAZY</li>
-      <li>Community Rewards: 50%</li>
-      <li>Liquidity: 30%</li>
-      <li>Development: 10%</li>
-      <li>Marketing: 10%</li>
-    </ul>
-  </section>
-
-  <!-- === Socials Section === -->
-  <section id="socials">
-    <h2>Join the Sloth Gang</h2>
-    <p>Follow LazySloth on social media:</p>
     <div class="socials">
-      <a href="https://instagram.com/" target="_blank">
-        <img src="instagram.png" alt="Instagram" class="social-icon">
+      <a href="https://instagram.com/" target="_blank" rel="noopener">
+        <img src="instagram.png" alt="Instagram Logo">
       </a>
-      <a href="https://twitter.com/" target="_blank">
-        <img src="twitter.png" alt="Twitter" class="social-icon">
+      <a href="https://twitter.com/" target="_blank" rel="noopener">
+        <img src="twitter.png" alt="Twitter/X Logo">
       </a>
-      <a href="https://t.me/" target="_blank">
-        <img src="telegram.png" alt="Telegram" class="social-icon">
-      </a>
-      <a href="https://radium.to/" target="_blank">
-        <img src="radium.png" alt="Radium" class="social-icon">
+      <a href="https://t.me/" target="_blank" rel="noopener">
+        <img src="telegram.png" alt="Telegram Logo">
       </a>
     </div>
   </section>
 
-  <!-- === Footer === -->
-  <footer>
-    <p>© 2025 LazySloth Coin – Take it slow 🦥</p>
-  </footer>
+  <!-- SECTION 2: Buy -->
+  <section id="buy">
+    <div class="container">
+      <h2>Get LazySloth</h2>
+      <p class="lead">Swap SOL for LAZY on Raydium — fast and easy.</p>
+      <a href="https://raydium.io/swap/?input=SOL&output=LAZY" target="_blank" rel="noopener" class="buy-btn">Buy on Raydium</a>
 
+      <h3>How to Buy</h3>
+      <div class="steps">
+        <div class="step"><b>1) Get a wallet</b>Install Phantom (or another Solana wallet) and create your address.</div>
+        <div class="step"><b>2) Add SOL</b>Buy SOL on an exchange or directly in the wallet and transfer it.</div>
+        <div class="step"><b>3) Swap for LAZY</b>Use Raydium or your wallet swap with the official token address.</div>
+        <div class="step"><b>4) That’s it</b>Now you’re part of the LazySloth gang — take it slow!</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SECTION 3: About -->
+  <section id="about">
+    <div class="container">
+      <h2>About LazySloth</h2>
+      <p class="lead" style="max-width:60ch;margin:0 auto">
+        LazySloth ist ein community-getriebener Memecoin. Langsam, stetig und entspannt —
+        mit Fokus auf Spaß, gute Vibes und eine aktive Community.
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">© 2025 LazySloth — Take it slow 🦥</div>
+  </footer>
 </body>
 </html>
-
