--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
     <p class="tagline">Lazy but rich af</p>
 
     <div class="socials">
-      <a href="https://instagram.com/" target="_blank" rel="noopener">
+      <a href="https://www.instagram.com/chillslothii/" target="_blank" rel="noopener">
         <img src="instagram.png" alt="Instagram Logo">
       </a>
-      <a href="https://twitter.com/" target="_blank" rel="noopener">
+      <a href="https://x.com/ChillSlothII" target="_blank" rel="noopener">
         <img src="twitter.png" alt="Twitter/X Logo">
       </a>
-      <a href="https://t.me/" target="_blank" rel="noopener">
+      <a href="https://t.me/+nzFyPr9t849hMzYy" target="_blank" rel="noopener">
         <img src="telegram.png" alt="Telegram Logo">
       </a>
     </div>
@@ -242,7 +242,7 @@
     <div class="container">
       <h2>Get LazySloth</h2>
       <p class="lead">Swap SOL for LAZY on Raydium — fast and easy.</p>
-      <a href="https://raydium.io/swap/?input=SOL&output=LAZY" target="_blank" rel="noopener" class="buy-btn">Buy on Raydium</a>
+      <a href="https://raydium.io/swap/?inputMint=sol&outputMint=2ZmAUqciYX8ThigFfjQaxw4YbhHUmSRUd5saG3Qgmoon" target="_blank" rel="noopener" class="buy-btn">Buy on Raydium</a>
 
       <h3>How to Buy</h3>
       <div class="steps">
