--- a/index.html
+++ b/index.html
@@ -308,10 +308,9 @@
       <h2>About LazySloth</h2>
       <div class="about-grid">
         <div class="about-text">
-          <p>LazySloth is a community-driven memecoin built on Solana. 🦥</p>
-          <p>Slow, steady &amp; always chilled – but with the power to moon 🚀</p>
-          <p>It’s about good vibes, having fun, and building a strong tribe.</p>
-          <p>💸 Get rich, live life at its best, and stay lazy while we win together.</p>
+          <p>LazySloth is more than just a memecoin – we are a team of passionate software developers who have long dreamed of creating our own token. With LazySloth, this dream has finally become reality.</p>
+          <p>Our mission is to give this coin real value and to build a strong, sustainable community. We believe in a project that is fun, inspiring, and at the same time has a solid future on the Solana blockchain.</p>
+          <p>For 2026, we are planning the release of our own game closely connected to LazySloth. With this, we aim not only to grow the token, but also to establish it in the world of gaming and entertainment.</p>
         </div>
         <div class="about-img">
           <img src="about.png" alt="About LazySloth placeholder">
