--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <title>LazySloth — The Chill Memecoin</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <!-- ✅ Logo / Favicon -->
+  <link rel="icon" type="image/png" href="0.Banner.png" />
+  <meta property="og:image" content="0.Banner.png" />
   <style>
     :root{
       --bg-light:#FFD700;
@@ -22,23 +25,35 @@
     img{max-width:100%;height:auto;display:block}
     .container{max-width:var(--maxw);margin:auto;padding:0 16px}
 
-    /* Header inside Section 1 */
+    /* Header */
     .header{
       width:100%;
       display:flex;align-items:center;justify-content:flex-end;
-      padding:16px 24px;
+      gap:10px;
+      padding:16px 60px 16px 24px; /* 👉 mehr Abstand rechts */
       background:transparent;
       position:absolute;top:0;left:0;right:0;
       z-index:10;
     }
     .btn{
-      background:var(--brand);color:#fff;border-radius:999px;
-      padding:10px 16px;font-weight:700;text-decoration:none;
-      box-shadow:var(--shadow);transition:.2s;
+      display:inline-block;
+      background:transparent;
+      color:#000;
+      border:2px solid #000;
+      border-radius:6px;
+      padding:6px 16px;
+      font-size:15px;
+      font-weight:700;
+      text-decoration:none;
+      transition:.2s;
     }
-    .btn:hover{filter:brightness(1.08);transform:translateY(-1px)}
+    .btn:hover{
+      background:#000;
+      color:#fff;
+      border-color:#000;
+    }
 
-    /* Section 1 Hero */
+    /* Section 1 Hero mit Sonnenstrahlen */
     #s1{
       min-height:100vh;
       display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;
@@ -77,10 +92,11 @@
     /* Section 2 */
     #buy{
       min-height:100vh;background:#000;color:var(--bg-light);
-      display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;
-      padding:40px 16px;
+      display:flex;flex-direction:column;text-align:center;
+      padding:0;
+      position:relative;
     }
-    #buy h2{margin-bottom:12px}
+    #buy h2{margin:20px 0 12px}
     #buy .lead{margin-bottom:32px;color:var(--bg-light)}
     .buy-btn{
       display:inline-block;background:#000;color:var(--bg-light);
@@ -89,10 +105,47 @@
       box-shadow:var(--shadow);transition:.2s;margin-bottom:40px;
     }
     .buy-btn:hover{background:var(--bg-light);color:#000;border-color:var(--bg-dark)}
-    .steps{display:grid;grid-template-columns:1fr;gap:20px;max-width:1100px;width:100%}
+    .steps{display:grid;grid-template-columns:1fr;gap:20px;max-width:1100px;width:100%;padding:0 16px;}
     @media(min-width:900px){.steps{grid-template-columns:repeat(4,1fr)}}
     .step{background:#111;border:1px solid var(--line);border-radius:12px;padding:20px;text-align:left}
     .step b{display:block;margin-bottom:8px;color:var(--bg-light)}
+
+    /* 👉 mehr Abstand unten bei Handy */
+    @media (max-width:899px){
+      #buy{padding-bottom:60px;}
+    }
+
+    /* 🚀 Banner ganz oben in Section 2 */
+    .banner{
+      background:rgba(0,0,0,0.3);
+      color:#fff;
+      overflow:hidden; padding:10px 0;
+      --speed: 28s;
+      --gap: 2rem;
+      --fontSize: 1rem;
+      font-size:var(--fontSize);
+      width:100%;
+    }
+    .banner .marquee{
+      display:flex; gap:var(--gap);
+      white-space:nowrap;
+      will-change:transform;
+      animation: marquee var(--speed) linear infinite;
+    }
+    .banner .sequence{ display:flex; gap:var(--gap); }
+    .banner .token{ font-weight:800; letter-spacing:.5px; }
+
+    @media (min-width:900px){
+      .banner{ --gap:6rem; --speed:30s; --fontSize:1.05rem; }
+    }
+    @media (max-width:899px){
+      .banner{ --gap:2rem; --speed:18s; --fontSize:.95rem; }
+    }
+
+    @keyframes marquee{
+      from{transform:translateX(0);}
+      to{transform:translateX(-50%);}
+    }
 
     /* Section 3 */
     #about{
@@ -109,19 +162,12 @@
     .about-text p{margin:0 0 1em;font-size:1.1rem;line-height:1.6}
     .about-img{display:flex;align-items:center;justify-content:center}
     .about-img img{width:60vh;height:60vh;object-fit:contain}
-
-    /* 👇 Mobile-Priorität: Bild nach oben + bessere Größe */
-    @media (max-width: 900px){
-      .about-img{order:-1; align-self:start; margin-bottom:12px;}
-      .about-img img{
-        width:min(85vw,520px);
-        height:auto;
-        max-height:40svh; /* verhindert zu viel Scrollen */
-      }
+    @media (max-width:900px){
+      .about-img{order:-1;margin-bottom:12px;}
+      .about-img img{width:min(85vw,520px);height:auto;max-height:40svh;}
       .about-text p{font-size:1rem;}
     }
 
-    /* Footer */
     footer{
       min-height:10vh;display:flex;align-items:center;justify-content:center;
       background:linear-gradient(to right,var(--bg-light),var(--bg-dark));
@@ -130,13 +176,12 @@
   </style>
 </head>
 <body>
-
-  <!-- Section 1 with header inside -->
+  <!-- Section 1 -->
   <section id="s1">
     <div class="header">
-      <a href="#buy" class="btn">Buy LAZY</a>
+      <a href="#buy" class="btn">Buy $CHSL</a>
+      <a href="#about" class="btn">ChillSloth</a>
     </div>
-
     <img src="0.Banner.png" alt="LazySloth Hero" class="hero-image">
     <p class="tagline">Lazy but rich af</p>
     <div class="socials">
@@ -146,8 +191,14 @@
     </div>
   </section>
 
-  <!-- Section 2 -->
+  <!-- Section 2 mit Banner -->
   <section id="buy">
+    <div class="banner" aria-label="Scrolling $CHSL banner">
+      <div class="marquee" id="marquee">
+        <div class="sequence" id="seqA"></div>
+        <div class="sequence" id="seqB"></div>
+      </div>
+    </div>
     <div class="container">
       <h2>Get LazySloth</h2>
       <p class="lead">Swap SOL for LAZY on Raydium — fast and easy.</p>
@@ -172,9 +223,7 @@
           <p>Our mission is to give this coin real value and to build a strong, sustainable community. We believe in a project that is fun, inspiring, and at the same time has a solid future on the Solana blockchain.</p>
           <p>For 2026, we are planning the release of our own game closely connected to LazySloth. With this, we aim not only to grow the token, but also to establish it in the world of gaming and entertainment.</p>
         </div>
-        <div class="about-img">
-          <img src="about.png" alt="About LazySloth">
-        </div>
+        <div class="about-img"><img src="about.png" alt="About LazySloth"></div>
       </div>
     </div>
   </section>
@@ -185,8 +234,33 @@
   </footer>
 
   <script>
-    // Auto-year
     document.getElementById("year").textContent = new Date().getFullYear();
+
+    (function(){
+      const unitText = '$CHSL 🚀';
+      const seqA = document.getElementById('seqA');
+      const seqB = document.getElementById('seqB');
+      const makeToken = () => {
+        const s = document.createElement('span');
+        s.className = 'token';
+        s.textContent = unitText;
+        return s;
+      };
+      const fill = () => {
+        seqA.innerHTML = '';
+        for (let i=0;i<6;i++){ seqA.appendChild(makeToken()); }
+        const need = Math.max(window.innerWidth, document.documentElement.clientWidth);
+        while (seqA.scrollWidth < need){ seqA.appendChild(makeToken()); }
+        seqB.innerHTML = '';
+        seqB.append(...Array.from(seqA.children).map(n => n.cloneNode(true)));
+      };
+      let t; 
+      const onResize = () => { clearTimeout(t); t = setTimeout(fill, 120); };
+      window.addEventListener('resize', onResize, { passive:true });
+      if (document.readyState === 'loading'){
+        document.addEventListener('DOMContentLoaded', fill, { once:true });
+      } else { fill(); }
+    })();
   </script>
 </body>
 </html>
